feat: enhance platform1.html layout and update content for clarity

--- a/platform1.html
+++ b/platform1.html
@@ -215,13 +215,12 @@
                         </div>
                      </div>
                   </div>
-                  <div class="blog-details-info-wrap mt-4">
-                     <ul class="blog-meta custom-ul d-flex flex-wrap">
+                  <div class="blog-details-info-wrap mt-4" style="max-width: 1100px; margin: 0 auto; text-align: left;">
+                     <ul class="blog-meta custom-ul d-flex flex-wrap justify-content-center gap-3">
                         <li>
-                           <!-- <img class="flex-shrink-0" src="assets/images/blog/author-dp.svg" alt=""> -->
                            <a class="meta-author" href="team.html">Project Lead: <span class="text_color_white text-decoration-underline">Dilanka Kasun</span></a>
                         </li>
-                        <li>
+                        <li class="d-flex align-items-center gap-2">
                            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                               <path d="M15.8333 3.33333H4.16667C3.24619 3.33333 2.5 4.07953 2.5 5V16.6667C2.5 17.5871 3.24619 18.3333 4.16667 18.3333H15.8333C16.7538 18.3333 17.5 17.5871 17.5 16.6667V5C17.5 4.07953 16.7538 3.33333 15.8333 3.33333Z" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                               <path d="M13.3333 1.66667V5" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -231,8 +230,8 @@
                            <a href="#">Started: May 2024</a>
                         </li>
                      </ul>
-                     <h2 class="blog-details-title details-title-gap text_color_white">AI-based Social Media & Communication Automation</h2>
-                     <p class="text_color_light_white details-section-gap">We empower businesses to master their communication channels across platforms like Facebook and WhatsApp. This service automates core tasks—from scheduling content and managing customer responses to collecting crucial feedback—freeing up valuable internal resources.</p>
+                     <h2 class="blog-details-title details-title-gap text_color_white">Smart AI for Orders, Messages, and Growth.</h2>
+                     <p class="text_color_light_white details-section-gap">We empower businesses to master their communication channels across platforms like Facebook and WhatsApp. This service automates core tasks - from scheduling content and managing customer responses to collecting crucial feedback - freeing up valuable internal resources.</p>
                      
                      <h2 class="blog-details-sub-title details-title-gap">Future Enhancement: AI-Driven Predictive Analytics</h2>
                      <p class="text_color_light_white">The next generation of this platform will utilize sophisticated AI to analyze customer behavior and forecast engagement trends. This allows businesses to proactively tailor content strategies, ensuring maximum relevance and impact.</p>
@@ -241,20 +240,20 @@
                      <p class="details-text-gap text_color_light_white"><strong>Concept:</strong> A robust web application designed to create, deploy, and manage specialized AI agents (e.g., Sales Agent, Support Agent) that interact directly with customers via the WhatsApp API.</p>
                      
                      <h3 class="h3 text_color_white mt-4">Core Features</h3>
-                     <ul class="custom-ul mt-3 text_color_light_white">
+                     <ul class="custom-ul mt-3 text_color_light_white text-start mx-auto" style="max-width: 900px;">
                         <li class="d-flex align-items-start mb-3"><i class="bi bi-check-circle-fill text_color_white me-2"></i> Real-time customer behavior tracking</li>
                         <li class="d-flex align-items-start mb-3"><i class="bi bi-check-circle-fill text_color_white me-2"></i> Granular agent performance management</li>
                         <li class="d-flex align-items-start mb-3"><i class="bi bi-check-circle-fill text_color_white me-2"></i> Integrated product/order management</li>
                         <li class="d-flex align-items-start mb-3"><i class="bi bi-check-circle-fill text_color_white me-2"></i> Flexible subscription controls</li>
                      </ul>
 
-                     <ul class="custom-ul mt-5 tag-list blog-details-tag-list d-flex flex-wrap align-items-center">
+                     <ul class="custom-ul mt-5 tag-list blog-details-tag-list d-flex flex-wrap align-items-center justify-content-left gap-2">
                         <li>#Machine_Learning</li>
                         <li>#Research</li>
                         <li>#SocialMediaAutomation</li>
                         <li>#AI</li>
                      </ul>
-                     <div class="d-flex flex-wrap align-items-center blog-details-social mt-5">
+                     <!-- <div class="d-flex flex-wrap align-items-center blog-details-social mt-5 justify-content-left gap-3">
                         <span class="text_color_white details-social-title d-inline-block">Share:</span>
                         <ul class="custom-ul social-list social-list-two d-flex align-items-center flex-wrap">
                            <li>
@@ -287,7 +286,7 @@
                               </a>
                            </li>
                         </ul>
-                     </div>
+                     </div> -->
                   </div>
                </div>
             </div>
