feat: enhance platform3.html layout, update content and add image

--- a/platform1.html
+++ b/platform1.html
@@ -230,7 +230,7 @@
                            <a href="#">Started: May 2024</a>
                         </li>
                      </ul>
-                     <h2 class="blog-details-title details-title-gap text_color_white">Smart AI for Orders, Messages, and Growth.</h2>
+                     <h2 class="blog-details-title details-title-gap text_color_white">Smart AI for Orders, Messages, and Growth</h2>
                      <p class="text_color_light_white details-section-gap">We empower businesses to master their communication channels across platforms like Facebook and WhatsApp. This service automates core tasks - from scheduling content and managing customer responses to collecting crucial feedback - freeing up valuable internal resources.</p>
                      
                      <h2 class="blog-details-sub-title details-title-gap">Future Enhancement: AI-Driven Predictive Analytics</h2>
