--- a/platform2.html
+++ b/platform2.html
@@ -231,7 +231,7 @@
                         </li>
                      </ul>
 
-                     <h2 class="blog-details-title details-title-gap text_color_white">Conversational AI that speaks your language, sees you.</h2>
+                     <h2 class="blog-details-title details-title-gap text_color_white">Conversational AI that speaks your language, sees you</h2>
                      <p class="text_color_light_white details-section-gap">An advanced AI platform built for natural language interactions in local contexts. Users can talk, type, or show what they see, and it responds like a real human in Sinhala, Tamil, or English.</p>
 
                      <h3 class="h3 text_color_white mt-4">Core capabilities</h3>
