feat: add og images for 3 projects, responsive live demo

--- a/platform1.html
+++ b/platform1.html
@@ -16,14 +16,14 @@
    <meta property="og:url" content="https://chakralabsai.com/platform1.html">
    <meta property="og:title" content="AI Communication Platform - Chakra Labs">
    <meta property="og:description" content="Streamline business interactions and enhance customer engagement with our AI Communication Platform.">
-   <meta property="og:image" content="assets/images/thumbnail.png">
+   <meta property="og:image" content="assets/images/platforms/thumbnail1.png">
 
    <!-- Twitter -->
    <meta property="twitter:card" content="summary_large_image">
    <meta property="twitter:url" content="https://chakralabsai.com/platform1.html">
    <meta property="twitter:title" content="AI Communication Platform - Chakra Labs">
    <meta property="twitter:description" content="Streamline business interactions and enhance customer engagement with our AI Communication Platform.">
-   <meta property="twitter:image" content="assets/images/thumbnail.png">
+   <meta property="twitter:image" content="assets/images/platforms/thumbnail1.png">
 
    <title>AI Communication Platform - Chakra Labs</title>
 
