--- a/platform2.html
+++ b/platform2.html
@@ -16,14 +16,14 @@
    <meta property="og:url" content="https://chakralabsai.com/platform2.html">
    <meta property="og:title" content="Conversational AI Platform - Chakra Labs">
    <meta property="og:description" content="Sinhala-ready, multi-language conversational AI with text, voice, and video interactions plus business system integrations.">
-   <meta property="og:image" content="assets/images/thumbnail.png">
+   <meta property="og:image" content="assets/images/platforms/thumbnail2.png">
 
    <!-- Twitter -->
    <meta property="twitter:card" content="summary_large_image">
    <meta property="twitter:url" content="https://chakralabsai.com/platform2.html">
    <meta property="twitter:title" content="Conversational AI Platform - Chakra Labs">
    <meta property="twitter:description" content="Sinhala-ready, multi-language conversational AI with text, voice, and video interactions plus business system integrations.">
-   <meta property="twitter:image" content="assets/images/thumbnail.png">
+   <meta property="twitter:image" content="assets/images/platforms/thumbnail2.png">
 
    <title>Conversational AI Platform - Chakra Labs</title>
 
@@ -263,8 +263,12 @@
                      <div class="mt-5">
                         <h3 class="h3 text_color_white">Live Demo</h3>
                         <p class="text_color_light_white mb-3">Try the conversational AI in real time. Speak, type, or show something on screen.</p>
-                        <div class="ratio ratio-16x9">
+                        <div class="ratio ratio-16x9 d-none d-md-block">
                            <iframe src="https://conversational-ai.chakralabsai.com/" title="Conversational AI Demo" allow="camera; microphone; fullscreen" loading="lazy"></iframe>
+                        </div>
+                        <div class="d-block d-md-none text_color_light_white p-4 rounded-3 border border-warning" style="background-color: rgba(255,255,255,0.1); box-shadow: 0 4px 8px rgba(0,0,0,0.2);">
+                           <p class="mb-3 fw-bold"><i class="bi bi-info-circle-fill me-2"></i>For the best experience, use a desktop to try the live demo. Or:</p>
+                           <a class="common-btn bg-blue-style d-inline-block" href="https://conversational-ai.chakralabsai.com/">Open the Live Demo</a>
                         </div>
                      </div>
                      <!-- <div class="d-flex flex-wrap align-items-center blog-details-social mt-5 justify-content-center gap-3">
