--- a/platform3.html
+++ b/platform3.html
@@ -16,14 +16,14 @@
    <meta property="og:url" content="https://chakralabsai.com/platform3.html">
    <meta property="og:title" content="IIOT Analysis System - Chakra Labs">
    <meta property="og:description" content="Optimize operations with real-time insights and predictive maintenance using our IIOT Analysis System.">
-   <meta property="og:image" content="assets/images/thumbnail.png">
+   <meta property="og:image" content="assets/images/platforms/thumbnail3.png">
 
    <!-- Twitter -->
    <meta property="twitter:card" content="summary_large_image">
    <meta property="twitter:url" content="https://chakralabsai.com/platform3.html">
    <meta property="twitter:title" content="IIOT Analysis System - Chakra Labs">
    <meta property="twitter:description" content="Optimize operations with real-time insights and predictive maintenance using our IIOT Analysis System.">
-   <meta property="twitter:image" content="assets/images/thumbnail.png">
+   <meta property="twitter:image" content="assets/images/platforms/thumbnail3.png">
 
    <title>IIOT Analysis System - Chakra Labs</title>
 
