feat: update application links to Google Forms for job positions

--- a/team.html
+++ b/team.html
@@ -373,7 +373,7 @@
                         <h3 class="h3 text_color_white">Full Stack Developer</h3>
                         <p class="text_color_light_white">We are looking for experienced Full Stack Developers to build scalable applications.</p>
                         <div class="mt-4">
-                           <a href="contact.html" class="common-btn border-style border-style-transparent">Apply Now</a>
+                           <a href="https://forms.gle/3WmkPzJhL91nfwk7A" class="common-btn border-style border-style-transparent">Apply Now</a>
                         </div>
                      </div>
                   </div>
@@ -384,7 +384,7 @@
                         <h3 class="h3 text_color_white">UI/UX Designer</h3>
                         <p class="text_color_light_white">Join our design team to create intuitive and beautiful user interfaces.</p>
                         <div class="mt-4">
-                           <a href="contact.html" class="common-btn border-style border-style-transparent">Apply Now</a>
+                           <a href="https://forms.gle/3WmkPzJhL91nfwk7A" class="common-btn border-style border-style-transparent">Apply Now</a>
                         </div>
                      </div>
                   </div>
@@ -395,7 +395,7 @@
                         <h3 class="h3 text_color_white">AI Engineer</h3>
                         <p class="text_color_light_white">Work on cutting-edge AI solutions and help us revolutionize industries.</p>
                         <div class="mt-4">
-                           <a href="contact.html" class="common-btn border-style border-style-transparent">Apply Now</a>
+                           <a href="https://forms.gle/3WmkPzJhL91nfwk7A" class="common-btn border-style border-style-transparent">Apply Now</a>
                         </div>
                      </div>
                   </div>
